# globus-dsi-rest

./: .gitignore  Doxyfile.in  Makefile.am  README.md  TODO.txt  add_header.c  annotated.html  buffer_get.c  classes.html  compute_headers.c  configure.ac  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  encode_form_data.c  error__is__retryable_8c.html  error_is_retryable.c  files.html  foo_8h_source.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  globus-dsi-rest.pc.in  globus__dsi__rest_8h.html  globus__dsi__rest_8h_source.html  globus__i__dsi__rest_8h_source.html  globus_dsi_rest.h  globus_i_dsi_rest.h  group__globus__dsi__rest__api.html  group__globus__dsi__rest__callback__signatures.html  group__globus__dsi__rest__callback__specializations.html  group__globus__dsi__rest__data.html  handle_get.c  handle_release.c  header.c  header_parse.c  index.html  md___users_bester_development_globus-dsi-rest_source__r_e_a_d_m_e.html  md__media_psf_Home_development_globus-dsi-rest_source_README.html  (+32 more)
packaging/: generate-deb  update-metadata
packaging/debian/globus-dsi-rest/debian/: changelog.in  control  copyright  globus-dsi-rest-dev.install  globus-dsi-rest-doc.install  libglobus-dsi-rest-dev.dirs  libglobus-dsi-rest0.install  rules
packaging/fedora/: globus-dsi-rest.spec
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  classes_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  search.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_9.js
test/: Makefile.am  add-header-test.c  complete-callback-test.c  encode-form-data-test.c  globus-dsi-rest-gridftp-test.pl  handle-get-test.c  handle-release-test.c  progress-idle-timeout-test.c  read-json-test.c  read-multipart-test.c  request-test.c  response-test.c  retryable-test.c  set-request-test.c  test-dsi.c  test-wrapper  test-xio-server.c  test-xio-server.h  uri-add-query-test.c  uri-decode.c  uri-escape-test.c  write-block-test.c  write-blocks-test.c  write-form-test.c  write-json-test.c  write-multipart-test.c
